fix: added exception to the example article in the sitemap

--- a/data/blog/example.mdx
+++ b/data/blog/example.mdx
@@ -4,7 +4,7 @@ author: Ivalin Chobanov
 date: 2025-10-05
 description: An article demonstrating how MDX can be used to write articles as part of our blog.
 keywords: [MDX, blog article]
-hide: false
+hide: true
 ---
 # Testing how text is displayed
 In this section we are testing how text is displayed on the page.
